Mon Jun 28 23:55:35 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_Properties.idl:

          Additional documentation, and added a temporary property to trigger
          best effort deployment.

        * DAnCE/DAnCE/DAnCE_Utility.h:
        * DAnCE/DAnCE/DAnCE_Utility.cpp:

          New specialization for extracting boolean values from property
          sequences.

        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
        * DAnCE/NodeManager/NodeManager_Impl.cpp:
        * DAnCE/NodeManager/Node_Manager_Module.h:
        * DAnCE/NodeManager/Node_Manager_Module.cpp:

          Added code to optionally enable best effort deployment semantics,
          controlled by --best-effort to the NodeManager at startup.

        * NEWS:

          Updates.

Mon Jun 28 19:53:55 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
        * DAnCE/NodeManager/NodeManager_Impl.h:
        * DAnCE/NodeManager/NodeManager_Impl.cpp:

          Moved plugin/interceptor registration into the NodeManager, so it is
          only done once.

Mon Jun 28 13:43:34 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tutorials/Hello/Tutorial/02_idl.html
        * connectors/ami4ccm/tutorials/Hello/Tutorial/03_executors.html
        * connectors/ami4ccm/tutorials/Hello/Tutorial/04_ami4ccm.html
        * connectors/ami4ccm/tutorials/Hello/Tutorial/05_compilation.html
        Layout changes.

Mon Jun 28 13:32:27 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * MPC/config/dds4ccm.mpb:
        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector.idl:
        * connectors/dds4ccm/examples/Large_Deployment/Connector/Large_Connector.idl:
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector.idl:
        * connectors/dds4ccm/examples/Shapes/Connector/Shapes_Connector.idl:
        * connectors/dds4ccm/idl/ccm_dds.idl: