@@ -8,9 +8,6 @@
 	<META NAME="CHANGEDBY" CONTENT="Marijke Hengstmengel">
 	<META NAME="CHANGED" CONTENT="20100628;14101200">
 	<META NAME="CHANGEDBY" CONTENT="Marijke Hengstmengel">
-	<META NAME="CHANGEDBY" CONTENT="Marijke Hengstmengel">
-	<META NAME="CHANGEDBY" CONTENT="Marijke Hengstmengel">
-	<META NAME="CHANGEDBY" CONTENT="Marijke Hengstmengel">
 	<!--//$Id$  -->
 	<STYLE TYPE="text/css">
 	<!--
